Fix header formatting on small window size
Avoid header text to be multiline on small window
sizes by setting min-width.

--- a/style.css
+++ b/style.css
@@ -32,11 +32,13 @@ body {
     flex: 1 1 90%;
     text-align: center;
     margin-bottom: -7px;
+    min-width: 210px;
 }
 
 #headerCredits {
-    flex: 1 1 15%;
+    flex: 0 0 15%;
     text-align: end;
+    min-width: 140px;
 }
 
 #headerCredits>a {
